Fix the bulleted list spacing

--- a/src/components/infopopups/common/infopopup.css
+++ b/src/components/infopopups/common/infopopup.css
@@ -60,6 +60,7 @@
 
 .bullet-row-content{
     display: flex;
+    padding-left: 15px;
 }
 .bullet-row-description {
     width:75%;
